samples/_failures_safe/1761077262_698239_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3bed7b8f.c: In function ‘main’:
./samples/SAFE/__tmp_3bed7b8f.c:178:16: error: expected ‘;’ at end of input
  178 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_3bed7b8f.c:178:9: error: expected declaration or statement at end of input
  178 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_3bed7b8f.c:178:9: error: expected declaration or statement at end of input
